--- a/24_bt_NPC_haqueS-dengD/index.html
+++ b/24_bt_NPC_haqueS-dengD/index.html
@@ -43,10 +43,10 @@
     <div class="container class-center">
         <div class="row align-items-start">
             <div class="col">
-                <center><b>Messi</b></center>
+                <center><b><h4>Messi</h4></b></center>
             </div>
             <div class="col">
-                <center><b>Phin</b></center>
+                <center><b><h4>Phin</h4></b></center>
             </div>
         </div>
 
@@ -54,6 +54,11 @@
             <div class="col">
                 <figure class="figure">
                     <img class="img-thumbnail" src="https://m.media-amazon.com/images/I/71j2pfh61tL.jpg">
+                </figure>
+            </div>
+            <div class="col">
+                <figure class="figure">
+                    <img class="img-thumbnail" src="https://i5.walmartimages.com/asr/746aa46d-c53a-4b22-8f17-4fe59ff4b127.8ecbca44b86e5ac1ec4393b59d3af2dd.jpeg">
                 </figure>
             </div>
         </div>
