here comes the main course :)

--- a/24_bt_NPC_haqueS-dengD/index.html
+++ b/24_bt_NPC_haqueS-dengD/index.html
@@ -41,7 +41,7 @@
 
     <center><h3>Meet Our Duckies!</h3></center>
     <div class="container class-center">
-        <div class="row align-items-start">
+        <div class="row">
             <div class="col">
                 <center><b><h4>Messi</h4></b></center>
             </div>
@@ -50,7 +50,7 @@
             </div>
         </div>
 
-        <div class="row align-items-end">
+        <div class="row align-items-center">
             <div class="col">
                 <figure class="figure">
                     <img class="img-thumbnail" src="https://m.media-amazon.com/images/I/71j2pfh61tL.jpg">
@@ -60,6 +60,15 @@
                 <figure class="figure">
                     <img class="img-thumbnail" src="https://i5.walmartimages.com/asr/746aa46d-c53a-4b22-8f17-4fe59ff4b127.8ecbca44b86e5ac1ec4393b59d3af2dd.jpeg">
                 </figure>
+            </div>
+        </div>
+
+        <div class="row align-items-end">
+            <div class="col">
+                <p>I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. I like soccer. </p>
+            </div>
+            <div class="col">
+                <p>I honestly have no idea where I got the dolphin. It must've been quite long ago. When I was younger though, my bed seemed huge and I used to navigate the intricacies of the wrinkles of my blanket and formed stories of my dolphin exploring the land filled with mystery and evil. <b>With the Pillow as my HQ! :)</b></p>
             </div>
         </div>
     </div>
